Ensure `ButtonVM` and `LabelVM` instances bind - `type="button"` input fields are not included in POST data - submitting values for readonly fields is insufficient i.e. `ControlType` isn't enough

--- a/src/ModelBinding/Views/Home/DisplayTemplates/ButtonVM.cshtml
+++ b/src/ModelBinding/Views/Home/DisplayTemplates/ButtonVM.cshtml
@@ -2,5 +2,6 @@
 
 <ButtonGroup>
     @Html.HiddenFor(m => m.ControlType)
+    @Html.HiddenFor(m => m.Id)
     @Html.TextBoxFor(m => m.Label, new { @class = "form-control btn btn-primary",type="button" })
 </ButtonGroup>
