--- a/src/ModelBinding/Views/Home/DisplayTemplates/LabelVM.cshtml
+++ b/src/ModelBinding/Views/Home/DisplayTemplates/LabelVM.cshtml
@@ -2,5 +2,5 @@
 
 <LabelGroup>
     @Html.HiddenFor(m => m.ControlType)
-    @Html.DisplayTextFor(m=>m.Label)
+    @Html.TextBoxFor(m=>m.Label)
 </LabelGroup>
